vite js, vite react, first app

--- a/01/index-18.html
+++ b/01/index-18.html
@@ -17,7 +17,7 @@
     const hello = React.createElement("h1", null, "Hello React");
     root.render(hello);
 
-    // const btn = React.createElement("button", {onClick: () => {alert("Hello react")}} , "clic me");
+    // const btn = React.createElement("button", {onClick: () => {alert("Hello react")}} , "click me");
     // root.render(btn);
 
 
