--- a/01/index-18-jsx.html
+++ b/01/index-18-jsx.html
@@ -11,36 +11,44 @@
 <body>
   <div id="root"></div>
 
+  <script>
+    // <h1>hola</h1>
+    // const body = document.querySelector('body');
+    // const title = document.createElement('H1');
+    // title.innerText = 'hola';
+    // body.appendChild(title);
+  </script>
+
   <script type="text/babel">
     
     const App = () => {
       return (
         <>
-            <h1>Hello World!</h1>
-            <h2>This is my first react app</h2>
-          </>
+          <h1>Hello World!</h1>
+          <h2>This is my first react app</h2>
+        </>
         )
       }
 
-    // const name = "Aleix";
+    // const name = "Aleix!!!";
     
     // const App = () => {
-    //   // const name = "Aleix";
+    //   const name = "Aleix";
     //   return (
     //     <>
-    //         <h1>Hello World!</h1>
-    //         <h2>It's {name} and this is my first react app</h2>
-    //       </>
+    //       <h1>Hello World!</h1>
+    //       <h2>It's {name} and this is my first react app</h2>
+    //     </>
     //     )
     //   }
 
 
     // const App = () => {
-      //   return (
-        //     <>
-        //     const name = "Aleix";
+    //     return (
+    //         <>
+    //         const name = "Aleix";
     //         <h1>Hello World!</h1>
-    //         <h2>It's {name} and this is my first react app</h2>
+    //         <h2>It's {name} and this is my first react app!</h2>
     //       </>
     //     )
     //   }
